<resources>
    <string name="facebook_app_id">1097356564056954</string>
    <string name="fb_login_protocol_scheme">fb1097356564056954</string>

    <string name="app_name">Meet in 5</string>
    <string name="additional_participants">+%1$d</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="or">  or  </string>
    <string name="dont_have_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="continue_with_fb">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="inbox">Inbox</string>
    <string name="archived_events">Archived events</string>
    <string name="sign_out">Sign out</string>
    <string name="abort">Cancel</string>
    <string name="wanna_sign_out">Do you really want to sign out?</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="_public">Public</string>
    <string name="_private">Private</string>
    <string name="_friends">Friends</string>
    <string name="friends_visibility_about">Visible only for friends.</string>
    <string name="private_visibility_about">Visible only for invited people.</string>
    <string name="public_visibility_about">Visible for everyone.</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="event_name">Event name</string>
    <string name="place">Place</string>
    <string name="find_category">Find Category</string>

    <string name="add_photo">Add photo</string>
    <string name="cover_photo">Cover photo</string>
    <string name="reset_password">Reset Password</string>
    <string name="remembered_credentials">Remembered Credentials?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>