<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.apusart.evently_android.guest.register_activity.RegisterActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView
            android:id="@+id/register_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/register_container"
            android:text="@string/app_name"
            style="@style/AppTitle"
            android:textSize="32sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_app_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/register"
            style="@style/Roboto14Pt"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/register_container"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="50dp"
            android:layout_marginHorizontal="40dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/register_inputs_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">
                <com.apusart.components.MainInput
                    android:id="@+id/register_email_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:main_input_input_title="@string/email_address"
                    app:main_input_input="@={viewModel.emailText}"/>
                <com.apusart.components.MainInput
                    android:id="@+id/register_password_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/register_email_container"
                    android:layout_marginTop="10dp"
                    app:main_input_input_title="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    app:main_input_input="@={viewModel.passwordText}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.apusart.components.ProgressButton
                android:id="@+id/register_email_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_inputs_container"
                app:button_name="@string/register"
                android:layout_marginTop="20dp"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/register_register_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_email_register_button">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="25dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/have_account"
                        style="@style/Body1Roboto14Pt"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_900"
                        style="@style/Body1Roboto14Pt"
                        android:text="@string/log_in"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.apusart.components.InfoModal
            android:id="@+id/register_error_modal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:modal_icon="@drawable/close_icon128"
            app:modal_background="@color/error_background_color"

            app:modal_title="Register error"
            app:modal_text_color="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>