<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/pick_event_visibility_public"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        android:elevation="8dp"
>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/white_ripple">
            <TextView
                android:id="@+id/pick_event_visibility_public_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/HeadlineRoboto24Pt"
                android:text="@string/_public" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/public_visibility_about"
                app:layout_constraintTop_toBottomOf="@id/pick_event_visibility_public_title"
                style="@style/Roboto14Pt"
                android:layout_marginTop="5dp" />
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/next_icon128"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/pick_event_visibility_public_title"
                app:layout_constraintTop_toTopOf="@id/pick_event_visibility_public_title"
                android:layout_marginEnd="2dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/pick_event_visibility_friends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        android:elevation="8dp"
>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/white_ripple">
            <TextView
                android:id="@+id/pick_event_visibility_friends_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeadlineRoboto24Pt"
                android:text="@string/_friends"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friends_visibility_about"
                app:layout_constraintTop_toBottomOf="@id/pick_event_visibility_friends_title"
                style="@style/Roboto14Pt"
                android:layout_marginTop="5dp"/>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/next_icon128"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/pick_event_visibility_friends_title"
                app:layout_constraintTop_toTopOf="@id/pick_event_visibility_friends_title"
                android:layout_marginEnd="2dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/pick_event_visibility_private"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        android:elevation="8dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@drawable/white_ripple">
            <TextView
                android:id="@+id/pick_event_visibility_private_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/HeadlineRoboto24Pt"
                android:text="@string/_private"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pick_event_visibility_private_title"
                android:text="@string/private_visibility_about"
                style="@style/Roboto14Pt"
                android:layout_marginTop="5dp"/>
            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@drawable/next_icon128"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/pick_event_visibility_private_title"
                app:layout_constraintTop_toTopOf="@id/pick_event_visibility_private_title"
                android:layout_marginEnd="2dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>