<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.apusart.evently_android.guest.reset_password_activity.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/reset_password_app_title"
            style="@style/AppTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/reset_password_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/Roboto14Pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/reset_password_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset_password_app_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/reset_password_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.apusart.components.MainInput
                android:id="@+id/reset_password_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toTopOf="parent"
                app:main_input_input="@={viewModel.emailText}"
                app:main_input_input_title="@string/email_address" />

            <com.apusart.components.ProgressButton
                android:id="@+id/reset_password_email_continue_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:button_name="Send reset password link"
                app:layout_constraintTop_toBottomOf="@id/reset_password_email_container" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/reset_password_remembered_credentials_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/reset_password_email_continue_button">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/Body1Roboto14Pt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remembered_credentials" />

                    <TextView
                        style="@style/Body1Roboto14Pt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/log_in"
                        android:textColor="@color/primary_900" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.apusart.components.InfoModal
            android:id="@+id/reset_password_error_modal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"

            app:modal_background="@color/error_background_color"
            app:modal_icon="@drawable/close_icon128"
            app:modal_text_color="@color/white"
            app:modal_title="Password reset error" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
